Mod/sources/tab-bar.css
/* ... */
#browser:not(.transparent-tabbar) #tabs-tabbar-container::after {
  content: " ";
  background-image: linear-gradient(0deg, var(--colorBgDark) 0%, var(--colorBg) 48%, var(--colorBgDark) 100%);
  width: 100%;
  z-index: -1;
  height: 100%;
  position: fixed;
  clip-path: inset(0 0 0 var(--transitionTabBarGradient));
  top: 0;
}

#browser:not(.transparent-tabbar).maximized:not(.tabs-at-edge) #tabs-tabbar-container[style*="height: 30px;"]::before {
  height: 37px;
}

#browser:not(.transparent-tabbar).maximized:not(.tabs-at-edge) #tabs-tabbar-container[style*="height: 61px;"]::before {
  height: 68px;
}

#browser:not(.transparent-tabbar):not(.maximized):not(.tabs-at-edge) #tabs-tabbar-container[style*="height: 30px;"]::before {
  height: 39px;
}

#browser:not(.transparent-tabbar):not(.maximized):not(.tabs-at-edge) #tabs-tabbar-container[style*="height: 61px;"]::before {
  height: 70px;
}

/* Allow 2nd level tab row bottom border to go under lock button */
.subcontainer-lock {
  position: absolute;
  right: 0;
}

/* Continue border under workspaces button */
.tabbar-workspace-button {
  border-bottom: 1px solid var(--GXborderColor);
}
.button-toolbar.workspace-popup.tabbar-workspace-button button {
  height: 29px;
}

